# CardGame

./: .gitignore  README.md  pyproject.toml
cardgame/base/: position.py
cardgame/detector/: client.py  main.py
cardgame/detector/api/: models.py
cardgame/detector/core/: detector.py
cardgame/detector/utils/: load_utils.py  plot.py  result.py  serialize.py
cardgame/mocked_test/data/: 1.pkl
cardgame/mocked_test/utils/: pikle_utils.py
notebooks/: GroundingDINO_with_Segment_Anything.ipynb  client.ipynb  first_steps.ipynb
