[tool.poetry]
name = "cardgame"
version = "0.1.0"
description = ""
authors = ["showpiecep <showpiecep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["other"], version = "^1.0.0"}
pygame = "^2.6.1"
transformers = "^4.48.3"
torch = "^2.6.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
